Fixed spacing in header

--- a/src/components/TopMenu.scss
+++ b/src/components/TopMenu.scss
@@ -15,7 +15,7 @@ header.top {
   }
 
   h1 {
-    //width: 20%;
+    width: 30%;
     margin: 0;
     margin-right: auto;
 
@@ -98,7 +98,7 @@ header.top {
   }
   .walletStatus {
     margin-left: auto;
-    width: 20%;
+    width: 30%;
 
     .connection {
       // padding: 8px;
